k8s/nest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-deployment
  labels:
    app: nest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nest
  template:
    metadata:
      labels:
        app: nest
    spec:
      containers:
      - name: nest
        image: dyaonly/nest-with-mariadb:arm
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: nest-service
spec:
  ports:
    - port: 3000
      protocol: TCP
  selector:
    app: nest
