k8s/argocd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
server:
  ingress:
    enabled: true
    ingressClassName: "nginx"
    hosts:
      - argocd.beer1.com
    paths:
      - /
    pathType: Prefix
